# mkt_analyzer

./: .coveragerc  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.md  index.rst
src/mkt_analyzer/: _cli.py  skeleton.py
tests/: conftest.py  test_skeleton.py
